# Waterwise

backend/: pyproject.toml
backend/core/: settings.py
backend/core/response/: api_response.py
backend/machine/api/: deps.py
backend/machine/api/v1/: deps.py  user.py
backend/machine/api/v1/auth/: google.py  router.py
backend/machine/clients/: google.py  injectors.py
backend/machine/controllers/: auth.py  user.py
backend/machine/models/: user.py
backend/machine/providers/: internal.py
backend/machine/schemas/models/v1/: token.py  user.py
backend/migrations/versions/: 04e19371c756_drop_null_constraints_for_fields_first_.py  1b2c2c2b5be0_add_fields_for_model_user.py  21f3364b195b_first_migration.py
frontend/: package-lock.json  package.json
